welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: not found: value Max
		return Max(a,b)
                       ^max1020:5: error: type mismatch;
 found   : Unit
 required: Int
	else if ((a<10 || a>20)&&(b<10 || b>20)) {
             ^